syntax = "proto3";

option csharp_namespace = "Proto.V1";

import "base.proto";

message AccountBalanceProto {
  BaseProto base = 1;
  string publicId = 5;
  string balance = 6;
}